categorie-deployment/service.yaml
# Define a 'Service' To Expose the application
apiVersion: v1
kind: Service
metadata:
  name: ms-categorie-service
spec:
  ports:
    - protocol: "TCP"
      port: 8070    # Port inside the cluster
      protocol: TCP
      targetPort: 8070
  selector:
    app: ms-categorie
