categorie-deployment/ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
  #name: microservice-ingress
  #annotations:
    #kubernetes.io/ingress.class: traefik
# spec:
#   rules:
#     - host: microservice.eureka.com
#       http:
#         paths:
#           #- path:
#             #pathType: Prefix
#             backend:
#               service:
#                 name: eureka-server-service
#                 port:
#                   number: 80
# ---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: contour-internal
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ingress.com
      http:
        paths:
          - path: /ms-categorie
            pathType: Prefix
            backend:
              service:
                name: ms-categorie-service
                port:
                  number: 80

          - path: /argo
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 9090
